# platform-apps

./: README.md
.github/workflows/: TEMPLATE.yml  argocd-mcp-server.yml
argocd-mcp-server/: .gitignore  Dockerfile  README.md  pyproject.toml
argocd-mcp-server/argocd_mcp_server/: __init__.py  __main__.py  client.py  http_server.py  server.py
